k8s/stockmanager.yml
apiVersion: v1
kind: Service
metadata:
  name: stockmanager
  namespace: default
  labels:
    app: stockmanager
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: stockmanager
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stockmanager-ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: stockmanager
          servicePort: 80
